# agentic-ai-workflow

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: api_config.py  database.py  logging_config.py  settings.py
deployment/docker/: Dockerfile
deployment/kubernetes/: deployment.yaml  service.yaml
scripts/: setup_project_structure.py
src/core/database/: connection.py  models.py  repositories.py
src/core/database/migrations/: 001_initial_schema.sql  002_add_workflow_tables.sql
src/core/exceptions/: agent_exceptions.py  workflow_exceptions.py
src/tools/: directory_parser.py  error_analyzer.py  query_handler.py  summarizer.py
tests/unit/test_core/: test_database.py
tests/unit/test_tools/: __init__.py  test_text_processing.py
